--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
   "author": "",
   "license": "ISC",
   "description": "",
+  "type": "module",
   "dependencies": {
     "cors": "^2.8.5",
     "express": "^5.1.0",
     "helmet": "^8.1.0",
+    "mongoose": "^8.19.0",
+    "nodemon": "^3.1.10",
     "postgres": "^3.4.7"
   }
 }
